--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,9 @@
-#Mon Jun 03 17:59:54 GMT+08:00 2013
+#Mon Oct 14 20:15:07 GMT+08:00 2013
 eclipse.preferences.version=1
 encoding//com/http/check_http.py=utf-8
 encoding//com/object-oriented/son.py=utf-8
+encoding//com/property/propertyDemo.py=utf-8
+encoding//com/string/join.py=utf-8
 encoding//com/string/str_format.py=utf-8
+encoding//com/xml/xmlRead.py=utf-8
 encoding/<project>=UTF-8
